fix navigation not properly breaking on mobile devices and hiding behind the logo

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -22,6 +22,10 @@
         left: 14px;
         top: 50%;
         transform: translateY(-50%);
+
+        img {
+            width: 100%;
+        }
     }
 
     &--list {
